# lock

./: AGENTS.md  Cargo.toml  README.md  operator.json
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
agent_ergonomics_audit/: README.md
agent_ergonomics_audit/audit/: HANDOFF.md  agent_surfaces.jsonl  ambition_bar_check.md  applied_changes.jsonl  intent_inference_corpus.jsonl  manifest.json  phase0_cli.json  phase0_skill_inventory.json  playbook.md  recommendations.jsonl  scorecard_pass_1.md  surface_inventory.jsonl
agent_ergonomics_audit/audit/regression_tests/: R-001__root_robot_triage_json.sh  R-002__root_capabilities_json.sh  R-003__root_robot_docs_guide.sh  R-004__doctor_fix_safe_refusal.sh
docs/: PLAN.md  coverage-parity-audit.md
schemas/: lock-v0.schema.json  lock-verify-v0.schema.json  witness-v0.schema.json
src/: doctor.rs  guard.rs  lib.rs  main.rs
src/cli/: mod.rs
src/input/: mod.rs
src/lockfile/: mod.rs  self_hash.rs
src/output/: mod.rs
src/refusal/: mod.rs
src/verify/: members.rs  mod.rs  output.rs
src/witness/: mod.rs
tests/: cli_smoke.rs  doctor.rs  e2e_spine.rs  golden_outputs.rs  golden_rules.rs  integration_outcomes.rs  unit_parsing.rs  verify_e2e.rs  witness_dispatch.rs  witness_schema.rs
tests/fixtures/golden/: lock_created.json  refusal_missing_hash.json
tests/support/: mod.rs
