[package]
name = "lock"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"

[dev-dependencies]
jsonschema = "0.42"
tempfile = "3"
